plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'org.sonarqube' version '4.4.1.3373'
	id 'jacoco'
	// id 'com.github.jakemarsden.git-hooks' version '0.0.2'  // Deshabilitado por problemas de compatibilidad
	// id 'checkstyle'  // Deshabilitado temporalmente
}

group = 'com.veterinaria'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.postgresql:postgresql'
	implementation 'com.h2database:h2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	// JaCoCo report solo se ejecuta cuando se solicita explícitamente
}

// JaCoCo configuration for code coverage
jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}
	// Removido finalizedBy jacocoTestCoverageVerification para build normal
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
				minimum = 0.80  // Restaurado para CI/push
			}
		}
	}
}

// Tarea personalizada para verificación completa de coverage (solo para CI/push)
task fullCoverageCheck {
	group = 'verification'
	description = 'Ejecuta tests con reporte de coverage y verificación de thresholds'
	dependsOn test, jacocoTestReport, jacocoTestCoverageVerification
}

// Tarea para build con coverage pero sin verificación estricta (desarrollo)
task buildWithCoverage {
	group = 'build'
	description = 'Build con reporte de coverage pero sin verificación de thresholds'
	dependsOn build, jacocoTestReport
}

// SonarQube configuration
sonar {
	properties {
		property "sonar.projectKey", "Consentidos_consentidos"
		property "sonar.organization", "consentidos"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
		property "sonar.java.source", "17"
		property "sonar.sources", "src/main/java"
		property "sonar.tests", "src/test/java"
		property "sonar.java.binaries", "build/classes/java/main"
		property "sonar.java.test.binaries", "build/classes/java/test"
		property "sonar.exclusions", "**/ConsentidosApplication.java,**/config/**"
		property "sonar.gradle.skipCompile", "true"
	}
}

// Checkstyle Configuration (deshabilitado temporalmente)
/*
checkstyle {
	toolVersion = '10.12.1'
	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
	ignoreFailures = true  // Cambiado a true temporalmente
	maxWarnings = 100      // Aumentado temporalmente
}
*/

// Manual Git Hooks disponibles:
// Windows: pre-commit.bat, pre-push.bat  
// Unix/Linux: pre-commit.sh, pre-push.sh
// Para usar: ejecutar manualmente antes de commit/push según sea necesario
